--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
 		"tw-animate-css": "^1.3.0",
 		"typescript": "^5.0.0",
 		"vite": "^6.2.6"
+	},
+	"dependencies": {
+		"@supabase/ssr": "^0.6.1",
+		"@supabase/supabase-js": "^2.49.8"
 	}
 }
