--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
 		"@tailwindcss/vite": "^4.0.0",
 		"bits-ui": "^1.6.0",
 		"clsx": "^2.1.1",
+		"formsnap": "^2.0.1",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"sveltekit-superforms": "^2.25.0",
 		"tailwind-merge": "^3.3.0",
 		"tailwind-variants": "^0.2.1",
 		"tailwindcss": "^4.0.0",
