--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	},
 	"dependencies": {
 		"@supabase/ssr": "^0.6.1",
-		"@supabase/supabase-js": "^2.49.8"
+		"@supabase/supabase-js": "^2.49.8",
+		"mode-watcher": "^0.5.1"
 	}
 }
