--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
 		"bits-ui": "^1.6.0",
 		"clsx": "^2.1.1",
 		"formsnap": "^2.0.1",
+		"mode-watcher": "^1.0.7",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"svelte-sonner": "^1.0.2",
 		"sveltekit-superforms": "^2.25.0",
 		"tailwind-merge": "^3.3.0",
 		"tailwind-variants": "^0.2.1",
@@ -32,7 +34,6 @@
 	},
 	"dependencies": {
 		"@supabase/ssr": "^0.6.1",
-		"@supabase/supabase-js": "^2.49.8",
-		"mode-watcher": "^0.5.1"
+		"@supabase/supabase-js": "^2.49.8"
 	}
 }
